--- a/prompt.yml
+++ b/prompt.yml
@@ -4,3 +4,7 @@
   vars_prompt:
     - name: name
       prompt: Enter your name
+  tasks:
+    - debug:
+        msg: "How are you {{ name }}! "
+      
